Adjusted control buttonsin their new orientation. Changed cell borders to only show top and left borders to avoid thick border overlap

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 
 main {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    
 }
 
 header {
@@ -19,34 +18,51 @@ header {
 
 .controls{
     display: flex;
-    gap: 1vh;
-    height: 60px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 10px;
+    width: 200px;
     text-align: center;
-    margin-bottom: 30px;
 }
-.grid-slider {
-   margin: 0 10px;
+.gridSlider {
+    align-self: center;
 }
 
-.grid {
-    border: 3px solid black;
+#grid {
+    border: 2px solid black;
     display: grid;
-    width: 800px;
-    height: 800px; 
+    width: 720px;
+    height: 720px; 
     margin: 10px;
+    padding: 0;
 }
 
 .cell {
- border: 1px solid darkgray;
+    border-top: 1px solid darkgray;
+    border-left: 1px solid darkgray;
+    background-color: transparent;
 }
 
 .noBorder{
     border: none;
 }
 
-.color-pickers {
+button {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.colorPickers {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap:8px;
 }
+
+input.grid-color, input.background, input.pen-color {
+
+}
+
+
+  
